--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install js-yaml
+        run: npm install js-yaml
+
       - name: Sync Labels
         uses: actions/github-script@v7
         with:
