--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          cache: yarn
+          cache-dependency-path: bomiot/templates/yarn.lock
       
       - name: Install Quasar CLI
         run: |
@@ -55,6 +56,10 @@ jobs:
       - name: Test Python dependencies
         run: |
           bomiot --version
+
+      - name: Install frontend dependencies
+        working-directory: bomiot/templates
+        run: yarn install --frozen-lockfile
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
