--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.9"]
-        node-version: ["16.x"]
+        node-version: ["18.x"]
         target: [x86_64]
     steps:
       - uses: actions/checkout@v4
@@ -50,9 +50,9 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -e .
+          uv pip install --upgrade pip
+          uv pip install -r requirements.txt
+          uv pip install -e .
 
       - name: Add ~/.local/bin to PATH
         run: echo "$HOME/.local/bin" >> $GITHUB_PATH
