--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,11 @@ jobs:
         working-directory: bomiot/templates
         run: yarn install --frozen-lockfile
 
+      - name: Build Python package
+        run: |
+          uv pip install build
+          python -m build
+
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
