--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
   
 env:
   UV_SYSTEM_PYTHON: 1
+  BOMIOT: bomiot
 jobs:
   linux-latest:
     runs-on: ubuntu-latest
@@ -16,7 +17,7 @@ jobs:
       matrix:
         python-version: ["3.9"]
         node-version: ["18.x"]
-        db: [sqlite, mysql, postgresql, oracle]
+        db: [sqlite, mysql, postgresql]
         target: [x86_64]
     steps:
       - uses: actions/checkout@v4
@@ -36,7 +37,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: yarn
-          cache-dependency-path: bomiot/templates/yarn.lock
+          cache-dependency-path: ${{ env.bomiot }}/templates/yarn.lock
       
       - name: Add ~/.local/bin to PATH
         run: echo "$HOME/.local/bin" >> $GITHUB_PATH   
@@ -64,8 +65,6 @@ jobs:
             uv pip install mysqlclient
           elif [ "${{ matrix.db }}" = "postgresql" ]; then
             uv pip install psycopg2
-          elif [ "${{ matrix.db }}" = "oracle" ]; then
-            uv pip install cx_Oracle
           fi
   
       - name: Generate DB config
@@ -73,11 +72,9 @@ jobs:
           if [ "${{ matrix.db }}" = "sqlite" ]; then
             echo -e "[database]\nengine = sqlite\nname = db.sqlite3" > setup.ini
           elif [ "${{ matrix.db }}" = "mysql" ]; then
-            echo -e "[database]\nengine = mysql\nname = bomiot\nuser = bomiot\npassword = bomiot\nhost = 127.0.0.1\nport = 3306" > setup.ini
+            echo -e "[database]\nengine = mysql\nname = ${{ env.BOMIOT }}\nuser = ${{ env.BOMIOT }}\npassword = ${{ env.BOMIOT }}\nhost = 127.0.0.1\nport = 3306" > setup.ini
           elif [ "${{ matrix.db }}" = "postgresql" ]; then
-            echo -e "[database]\nengine = postgresql\nname = bomiot\nuser = bomiot\npassword = bomiot\nhost = 127.0.0.1\nport = 5432" > setup.ini
-          elif [ "${{ matrix.db }}" = "oracle" ]; then
-            echo -e "[database]\nengine = oracle\nname = FREEPDB1\nuser = bomiot\npassword = bomiot\nhost = 127.0.0.1\nport = 1521" > setup.ini
+            echo -e "[database]\nengine = postgresql\nname = ${{ env.BOMIOT }}\nuser = ${{ env.BOMIOT }}\npassword = ${{ env.BOMIOT }}\nhost = 127.0.0.1\nport = 5432" > setup.ini
           fi
       
       - name: Migrate database
@@ -85,7 +82,7 @@ jobs:
           bomiot migrate
           bomiot initadmin
 
-      - name: Test bomiot project
+      - name: Test bomiot project template
         working-directory: test/templates
         run: |
           yarn install --frozen-lockfile
@@ -137,17 +134,6 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
-
-      # Oracle 使用 community 版本镜像
-      oracle:
-        image: gvenzl/oracle-free:23-slim
-        env:
-          ORACLE_PASSWORD: bomiot
-          APP_USER: bomiot
-          APP_USER_PASSWORD: bomiot
-        ports:
-          - 1521:1521
-        options: --health-cmd="echo 'SELECT 1 FROM DUAL;' | sqlplus -L bomiot/bomiot@localhost/FREEPDB1" --health-interval=10s --health-timeout=5s --health-retries=10
 
   merge:
     name: Building Single Artifact
