--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9"]
-        node-version: ["18.x"]
+        python-version: ["3.9","3.10","3.11","3.12","3.13"]
+        node-version: ["18.x","20.x","22.x","24.x"]
         db: [sqlite, mysql, postgresql]
         target: [x86_64]
     steps:
@@ -177,4 +177,3 @@ jobs:
         run: |
           uv pip install --upgrade twine
           twine upload --skip-existing *
-
