--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9","3.10","3.11","3.12","3.13"]
-        node-version: ["18.x","20.x","22.x","24.x"]
-        db: [sqlite, mysql, postgresql]
+        python-version: ["3.9"]
+        node-version: ["18.x"]
+        db: [sqlite]
         target: [x86_64]
     steps:
       - uses: actions/checkout@v4
@@ -138,6 +138,105 @@ jobs:
           --health-timeout=5s
           --health-retries=5
 
+  windows-latest:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: ["3.9"]
+        node-version: ["18.x"]
+        db: [sqlite, mysql, postgresql]
+        target: [x86_64]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: ${{ matrix.target }}
+
+      - name: Start MySQL (if needed)
+        if: matrix.db == 'mysql'
+        run: |
+          docker run -d --name mysql -e MYSQL_ROOT_PASSWORD=bomiot -e MYSQL_DATABASE=bomiot -e MYSQL_USER=bomiot -e MYSQL_PASSWORD=bomiot -p 3306:3306 mysql:8
+
+      - name: Start PostgreSQL (if needed)
+        if: matrix.db == 'postgresql'
+        run: |
+          docker run -d --name postgres -e POSTGRES_DB=bomiot -e POSTGRES_USER=bomiot -e POSTGRES_PASSWORD=bomiot -p 5432:5432 postgres:15
+
+      - name: Wait for MySQL
+        if: matrix.db == 'mysql'
+        shell: bash
+        run: |
+          for i in {1..30}; do
+            docker exec mysql mysqladmin ping -h127.0.0.1 -ubomiot -pbomiot && break
+            sleep 2
+          done
+
+      - name: Wait for PostgreSQL
+        if: matrix.db == 'postgresql'
+        shell: bash
+        run: |
+          for i in {1..30}; do
+            docker exec postgres pg_isready -U bomiot && break
+            sleep 2
+          done
+
+      - name: Install DB drivers
+        shell: bash
+        run: |
+          if [ "${{ matrix.db }}" = "mysql" ]; then
+            uv pip install mysqlclient
+          elif [ "${{ matrix.db }}" = "postgresql" ]; then
+            uv pip install psycopg2
+          fi
+
+      - name: Generate DB config
+        shell: bash
+        run: |
+          if [ "${{ matrix.db }}" = "sqlite" ]; then
+            echo -e "[database]\nengine = sqlite\nname = db.sqlite3" > setup.ini
+          elif [ "${{ matrix.db }}" = "mysql" ]; then
+            echo -e "[database]\nengine = mysql\nname = ${{ env.BOMIOT }}\nuser = ${{ env.BOMIOT }}\npassword = ${{ env.BOMIOT }}\nhost = 127.0.0.1\nport = 3306" > setup.ini
+          elif [ "${{ matrix.db }}" = "postgresql" ]; then
+            echo -e "[database]\nengine = postgresql\nname = ${{ env.BOMIOT }}\nuser = ${{ env.BOMIOT }}\npassword = ${{ env.BOMIOT }}\nhost = 127.0.0.1\nport = 5432" > setup.ini
+          fi
+
+      - name: Install Python dependencies
+        run: |
+          uv pip install --upgrade pip
+          uv pip install -r requirements.txt
+          uv pip install -e .
+
+      - name: Migrate database
+        run: |
+          bomiot migrate
+          bomiot initadmin
+
+      - name: Run bomiot server (background)
+        run: |
+          start /b bomiot run
+          timeout /t 10
+
+      - name: Test login API
+        run: |
+          uv pip install requests
+          python -c "import requests; resp = requests.post('http://127.0.0.1:8000/login/', json={'username': 'admin', 'password': 'admin'}); print('Status:', resp.status_code); print('Response:', resp.json()); assert resp.status_code == 200 and 'token' in resp.json(), 'Login failed or token not found'"
+
+      - name: Build Python package
+        if: matrix.db == 'sqlite' && matrix.node-version == '18.x'
+        run: |
+          uv pip install build
+          python -m build
+
+      - name: Upload wheels
+        if: matrix.db == 'sqlite' && matrix.node-version == '18.x'
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ github.job }}-${{ matrix.target }}-${{ matrix.python-version }}
+          path: dist
+  
   merge:
     name: Building Single Artifact
     runs-on: ubuntu-latest
