--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,7 +144,7 @@ jobs:
       matrix:
         python-version: ["3.9"]
         node-version: ["18.x"]
-        db: [sqlite, mysql, postgresql]
+        db: [sqlite, postgresql]
         target: [x86_64]
     steps:
       - uses: actions/checkout@v4
@@ -154,24 +154,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Start MySQL (if needed)
-        if: matrix.db == 'mysql'
-        run: |
-          docker run -d --name mysql -e MYSQL_ROOT_PASSWORD=bomiot -e MYSQL_DATABASE=bomiot -e MYSQL_USER=bomiot -e MYSQL_PASSWORD=bomiot -p 3306:3306 mysql:8
-
       - name: Start PostgreSQL (if needed)
         if: matrix.db == 'postgresql'
         run: |
           docker run -d --name postgres -e POSTGRES_DB=bomiot -e POSTGRES_USER=bomiot -e POSTGRES_PASSWORD=bomiot -p 5432:5432 postgres:15
-
-      - name: Wait for MySQL
-        if: matrix.db == 'mysql'
-        shell: bash
-        run: |
-          for i in {1..30}; do
-            docker exec mysql mysqladmin ping -h127.0.0.1 -ubomiot -pbomiot && break
-            sleep 2
-          done
 
       - name: Wait for PostgreSQL
         if: matrix.db == 'postgresql'
@@ -185,9 +171,7 @@ jobs:
       - name: Install DB drivers
         shell: bash
         run: |
-          if [ "${{ matrix.db }}" = "mysql" ]; then
-            uv pip install mysqlclient
-          elif [ "${{ matrix.db }}" = "postgresql" ]; then
+          if [ "${{ matrix.db }}" = "postgresql" ]; then
             uv pip install psycopg2
           fi
 
@@ -196,8 +180,6 @@ jobs:
         run: |
           if [ "${{ matrix.db }}" = "sqlite" ]; then
             echo -e "[database]\nengine = sqlite\nname = db.sqlite3" > setup.ini
-          elif [ "${{ matrix.db }}" = "mysql" ]; then
-            echo -e "[database]\nengine = mysql\nname = ${{ env.BOMIOT }}\nuser = ${{ env.BOMIOT }}\npassword = ${{ env.BOMIOT }}\nhost = 127.0.0.1\nport = 3306" > setup.ini
           elif [ "${{ matrix.db }}" = "postgresql" ]; then
             echo -e "[database]\nengine = postgresql\nname = ${{ env.BOMIOT }}\nuser = ${{ env.BOMIOT }}\npassword = ${{ env.BOMIOT }}\nhost = 127.0.0.1\nport = 5432" > setup.ini
           fi
