--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -333,4 +333,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           uv pip install --upgrade twine
-          twine upload --skip-existing *
+          twine upload --skip-existing dist/*.whl dist/*.tar.gz
