--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -333,4 +333,5 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           uv pip install --upgrade twine
+          ls dist
           twine upload --skip-existing *.whl *.tar.gz
