--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -333,5 +333,6 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           uv pip install --upgrade twine
-          ls dist
-          twine upload --skip-existing *.whl *.tar.gz
+          ls
+          ls wheels
+    twine upload --skip-existing wheels/*.whl wheels/*.tar.gz
