--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ requests = "^2.32.3"
 uvicorn = "^0.34.3"
 httptools = "^0.6.4"
 aiofiles = "^24.1.0"
+bomiot-message = "^0.4.5"
 
 
 [build-system]
