--- a/bomiot/cmd/file/supervisor.conf
+++ b/bomiot/cmd/file/supervisor.conf
@@ -1,7 +1,7 @@
 [program:bomiot]
 directory = /home/bomiot/
 user = root
-command = daphne -b 0.0.0.0 -p 8008 bomiot.server.server.asgi:application
+command = bomiot run -b 0.0.0.0 -p 8008
 autostart = true
 autorestart = true
 startsecs = 0
