--- a/bomiot/cmd/file/pyproject.toml
+++ b/bomiot/cmd/file/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bomiot"
-version = "0.9.1"
+version = "0.9.2"
 description = "One App you can do everything"
 authors = ["Bomiot <Singosgu@gmail.com>"]
 readme = "README.md"
@@ -27,16 +27,19 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-django = "~4.2.16"
+django = "~4.2.23"
 django-cors-headers = "~4.4.0"
 pyjwt = ">=2.10.1"
 django-filter = "~24.3"
 djangorestframework-csv = "~3.0.2"
+bomiot-token = ">=0.7.0"
+bomiot-asgi = ">=0.5.1"
+bomiot-core = ">=0.5.7"
+bomiot-control = ">=0.1.2"
+bomiot-data-control = ">=0.3.2"
 orjson = "~3.10.7"
 djangorestframework = "~3.15.2"
 django-apscheduler = "~0.7.0"
-daphne = "~4.1.2"
-twisted = {extras = ["http2", "tls"], version = "~24.7.0"}
 pandas = "~2.2.3"
 watchdog = "~6.0.0"
 tomlkit = "~0.13.2"
@@ -45,6 +48,13 @@ pypistats = "^1.9.0"
 psutil = "^7.0.0"
 xlsxwriter = "~3.2.3"
 requests = "^2.32.3"
+uvicorn = "^0.34.3"
+httptools = "^0.6.4"
+aiofiles = "^24.1.0"
+bomiot-message = "^0.4.5"
+starlette = "~0.46.2"
+fastapi = "~0.115.14"
+flask = "~3.1.1"
 
 [build-system]
 requires = ["poetry-core"]
