--- a/bomiot/cmd/file/supervisor.conf
+++ b/bomiot/cmd/file/supervisor.conf
@@ -8,6 +8,10 @@ startsecs = 0
 stopwaitsecs = 0
 stdout_logfile = /home/bomiot/bomiot_supervisor_access.log
 stderr_logfile = /home/bomiot/bomiot_supervisor_err.log
-stopscript=/path/to/stoppid.py
-stopscript_timeout=30
 redirect_stderr = true
+
+[eventlistener:run_stoppid]
+command = python3 /path/to/stoppid.py
+events = PROCESS_STATE_STOPPED
+autostart = true
+autorestart = true
