--- a/bomiot/cmd/file/pyproject.toml
+++ b/bomiot/cmd/file/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bomiot"
-version = "0.9.9"
+version = "0.9.10"
 description = "One App you can do everything"
 authors = ["Bomiot <Singosgu@gmail.com>"]
 readme = "README.md"
@@ -37,6 +37,7 @@ bomiot-asgi = ">=0.5.2"
 bomiot-core = ">=0.5.8"
 bomiot-control = ">=0.1.2"
 bomiot-data-control = ">=0.3.2"
+bomiot_process = ">=0.9.10"
 orjson = "~3.10.7"
 djangorestframework = "~3.15.2"
 django-apscheduler = "~0.7.0"
