--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "bomiot"
-version = "0.9.9"
-description = "One App you can do everything"
+version = "0.9.10"
+description = "Powerful Distributed Document Management Framework & Full-Stack Development Platform"
 authors = ["Bomiot <Singosgu@gmail.com>"]
 readme = "README.md"
 homepage = "https://github.com/Bomiot/Bomiot"
@@ -37,6 +37,7 @@ bomiot-asgi = ">=0.5.2"
 bomiot-core = ">=0.5.8"
 bomiot-control = ">=0.1.2"
 bomiot-data-control = ">=0.3.2"
+bomiot-process = ">=0.9.10"
 orjson = "~3.10.7"
 djangorestframework = "~3.15.2"
 django-apscheduler = "~0.7.0"
@@ -55,6 +56,7 @@ bomiot-message = "^0.4.5"
 starlette = "~0.46.2"
 fastapi = "~0.115.14"
 flask = "~3.1.1"
+
 
 
 [build-system]
