--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ anyio==4.9.0 ; python_version >= "3.9" and python_version < "4.0" \
 apscheduler==3.11.0 ; python_version >= "3.9" and python_version < "4.0" \
     --hash=sha256:4c622d250b0955a65d5d0eb91c33e6d43fd879834bf541e0a18661ae60460133 \
     --hash=sha256:fc134ca32e50f5eadcc4938e3a4545ab19131435e851abb40b34d63d5141c6da
-asgiref==3.8.1 ; python_version >= "3.9" and python_version < "4.0" \
-    --hash=sha256:3e1e3ecc849832fe52ccf2cb6686b7a55f82bb1d6aee72a58826471390335e47 \
-    --hash=sha256:c343bd80a0bec947a9860adb4c432ffa7db769836c64238fc34bdc3fec84d590
+asgiref==3.9.0 ; python_version >= "3.9" and python_version < "4.0" \
+    --hash=sha256:06a41250a0114d2b6f6a2cb3ab962147d355b53d1de15eebc34a9d04a7b79981 \
+    --hash=sha256:3dd2556d0f08c4fab8a010d9ab05ef8c34565f6bf32381d17505f7ca5b273767
 blinker==1.9.0 ; python_version >= "3.9" and python_version < "4.0" \
     --hash=sha256:b4ce2265a7abece45e7cc896e98dbebe6cead56bcf805a3d23136d145f5445bf \
     --hash=sha256:ba0efaa9080b619ff2f3459d1d500c57bddea4a6b424b60a91141db6fd2f08bc
@@ -96,6 +96,9 @@ bomiot-message==0.4.5 ; python_version >= "3.9" and python_version < "4.0" \
     --hash=sha256:f0b116d5a6082bae055c0c2d4eb7102fc158dbe31b43d54062a341e46c84f0ce \
     --hash=sha256:fbbd215747897e6a4f74f74be164b7f509b4375b3a6b0fd70453def343b00e13 \
     --hash=sha256:fce64a32f0bb8cdfe596dca082eeb24fd9fcedb191cab52e12eb82a42cfbf8bf
+bomiot-process==0.9.10 ; python_version >= "3.9" and python_version < "4.0" \
+    --hash=sha256:b60fa387aec0d0f8d7e39cd150b26c785eecefcd5c8061e502e7b0a2735282de \
+    --hash=sha256:c094dededc0a9ccd7039471281f32405c4e66d0db05e1513f9ce640b64788471
 bomiot-token==0.7.0 ; python_version >= "3.9" and python_version < "4.0" \
     --hash=sha256:1dd81d06fc611c8fc575477ec41c60f99ae45cd30e6a80e7582436a50c595f5f \
     --hash=sha256:2634ea924799773ca0fd1d3a06127cdd37a3f25cd893be5dc0ab2ce15c976ccd \
@@ -783,9 +786,9 @@ typepy==1.3.4 ; python_version >= "3.9" and python_version < "4.0" \
 typepy[datetime]==1.3.4 ; python_version >= "3.9" and python_version < "4.0" \
     --hash=sha256:89c1f66de6c6133209c43a94d23431d320ba03ef5db18f241091ea594035d9de \
     --hash=sha256:d5ed3e0c7f49521bff0603dd08cf8d453371cf68d65a29d3d0038552ccc46e2e
-typing-extensions==4.14.0 ; python_version >= "3.9" and python_version < "4.0" \
-    --hash=sha256:8676b788e32f02ab42d9e7c61324048ae4c6d844a399eebace3d4979d75ceef4 \
-    --hash=sha256:a1514509136dd0b477638fc68d6a91497af5076466ad0fa6c338e44e359944af
+typing-extensions==4.14.1 ; python_version >= "3.9" and python_version < "4.0" \
+    --hash=sha256:38b39f4aeeab64884ce9f74c94263ef78f3c22467c8724005483154c26648d36 \
+    --hash=sha256:d1e1e3b58374dc93031d6eda2420a48ea44a36c2b4766a4fdeb3710755731d76
 typing-inspection==0.4.1 ; python_version >= "3.9" and python_version < "4.0" \
     --hash=sha256:389055682238f53b04f7badcb49b989835495a96700ced5dab2d8feae4b26f51 \
     --hash=sha256:6ae134cc0203c33377d43188d4064e9b357dba58cff3185f22924610e70a9d28
