--- a/bomiot/cmd/file/pyproject.toml
+++ b/bomiot/cmd/file/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "bomiot"
-version = "0.9.10"
-description = "One App you can do everything"
+version = "0.9.12"
+description = "Powerful Distributed Document Management Framework & Full-Stack Development Platform"
 authors = ["Bomiot <Singosgu@gmail.com>"]
 readme = "README.md"
 homepage = "https://github.com/Bomiot/Bomiot"
@@ -34,10 +34,10 @@ django-filter = "~24.3"
 djangorestframework-csv = "~3.0.2"
 bomiot-token = ">=0.7.0"
 bomiot-asgi = ">=0.5.2"
+bomiot-message = ">=0.4.5"
 bomiot-core = ">=0.5.8"
 bomiot-control = ">=0.1.2"
 bomiot-data-control = ">=0.3.2"
-bomiot_process = ">=0.9.10"
 orjson = "~3.10.7"
 djangorestframework = "~3.15.2"
 django-apscheduler = "~0.7.0"
@@ -48,11 +48,10 @@ openpyxl = "~3.1.5"
 pypistats = "^1.9.0"
 psutil = "^7.0.0"
 xlsxwriter = "~3.2.3"
-requests = "^2.32.3"
-uvicorn = "^0.34.3"
+requests = "~2.32.3"
+uvicorn = "~0.34.3"
 httptools = "^0.6.4"
 aiofiles = "^24.1.0"
-bomiot-message = "^0.4.5"
 starlette = "~0.46.2"
 fastapi = "~0.115.14"
 flask = "~3.1.1"
