--- a/bomiot/cmd/file/supervisor.conf
+++ b/bomiot/cmd/file/supervisor.conf
@@ -1,17 +1,16 @@
 [program:bomiot]
 directory = /home/bomiot/
 user = root
-command = bomiot run -b 0.0.0.0 -p 8008
+command = bomiot run -b 0.0.0.0 -p 8008 -w 4
 autostart = true
-autorestart = true
-startsecs = 0
-stopwaitsecs = 0
+autorestart=true
+startretries=3
+exitcodes=0,2
+stopsignal=TERM
+stopwaitsecs=10
+stopasgroup=true
+killasgroup=true
 stdout_logfile = /home/bomiot/bomiot_supervisor_access.log
 stderr_logfile = /home/bomiot/bomiot_supervisor_err.log
-redirect_stderr = true
-
-[eventlistener:run_stoppid]
-command = python3 /path/to/stoppid.py
-events = PROCESS_STATE_STOPPED
-autostart = true
-autorestart = true
+stdout_logfile_maxbytes=20MB
+stdout_logfile_backups=10
