--- a/bomiot/cmd/file/.gitignore
+++ b/bomiot/cmd/file/.gitignore
@@ -1,13 +1,13 @@
-# Created by .ignore support plugin (hsz.mobi)
+# Created by .ignore support plugin (Elvis.Shi)
 /.idea
 /.vscode
 /.vagrant
 *.pyc
 /bomiot.egg-info
 /build
+/dist
+/backup
 npm-debug.log
-/test
-/tests
 /bomiot/server/.idea/
 /logs/
 /bomiot/.idea
@@ -15,5 +15,35 @@ npm-debug.log
 bomiot/server/logs/
 db.sqlite3
 install.sh
+notice.*
 *.pyc
 .venv
+/admin
+setup.ini
+asgi.py
+/.history
+auth_key.py
+*.egg
+*.egg-info
+*.whl
+*.tar.gz
+*.zip
+*.tar
+*.gz
+*.rar
+*.7z
+*.db
+*.sqlite3
+*.log
+*.pid
+__pycache__
+/.github/workflows/logs/
+/.github/artifacts/
+ci-logs/
+/temp/
+/*.tmp
+/*.temp
+/*.swp
+/*.swo
+/*.log
+/testing/
