--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bomiot"
-version = "1.0.8"
+version = "1.0.9"
 description = "Powerful Distributed Document Management Framework & Full-Stack Development Platform"
 authors = ["Bomiot <Singosgu@gmail.com>"]
 readme = "README.md"
@@ -32,7 +32,7 @@ django-cors-headers = "~4.4.0"
 pyjwt = ">=2.10.1"
 django-filter = "~24.3"
 djangorestframework-csv = "~3.0.2"
-bomiot-asgi = "==0.5.2"
+bomiot-asgi = "==0.5.17"
 bomiot-token = ">=0.7.0"
 bomiot-message = ">=0.4.5"
 bomiot-control = ">=0.1.4"
@@ -46,7 +46,7 @@ openpyxl = "~3.1.5"
 psutil = "^7.0.0"
 xlsxwriter = "~3.2.3"
 requests = "~2.32.3"
-uvicorn = "~0.34.3"
+uvicorn = {extras = ["standard"], version = "^0.35.0"}
 httptools = "^0.6.4"
 aiofiles = "^24.1.0"
 starlette = "~0.46.2"
